--- a/informer/index.html
+++ b/informer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Inform</title>
+  <title>Informer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
